0x01-variables_if_else_while/1-last_digit.c:
st_digit.c:11:5: error: ‘n’ is used uninitialized in this function [-Werror=uninitialized]
   11 | int last_digit  =       n       %       10;
      |     ^~~~~~~~~~
cc1: all warning
